--- a/first-react-app/src/components/PetCard/styles.module.css
+++ b/first-react-app/src/components/PetCard/styles.module.css
@@ -1,8 +1,10 @@
-.hide {
+.container {
     max-width: 20rem;
     width: 100%;
+    border: 1px solid #fff;
+    border-radius: 2rem;
+    overflow: hidden;
 }
-
 .image {
     width: 100%;
 }
