feat: add card calltoaction

--- a/first-react-app/src/components/PetCard/styles.module.css
+++ b/first-react-app/src/components/PetCard/styles.module.css
@@ -4,7 +4,16 @@
     border: 1px solid #fff;
     border-radius: 2rem;
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 .image {
     width: 100%;
+}
+.callToAction {
+    margin: 1rem;
+    padding: 1rem;
+    background-color: #fff;
+    border-radius: 1rem;
 }
